# Projeto_API

./: pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: data.py  main.py
test/: testes.py
