[tool.poetry]
name = "projeto-api"
version = "0.1.0"
description = ""
authors = ["Leonardo Souza <leo.armster1994@gmail.com>"]
readme = "README.md"
packages = [{ include = "projeto_api" }]  # ajuste conforme nome da pasta do seu código
requires-python = ">=3.12,<4.0"

[tool.poetry.dependencies]
taskipy = ">=1.14.1,<2.0.0"
blue = ">=0.9.1,<0.10.0"
isort = ">=6.0.1,<7.0.0"
pytest = ">=8.3.5,<9.0.0"
mkdocs = ">=1.6.1,<2.0.0"
mkdocstrings-python = ">=1.16.10,<2.0.0"
pygments = ">=2.19.1,<3.0.0"
mkdocs-material = ">=9.6.13,<10.0.0"
pymdown-extensions = ">=10.15,<11.0"
mkdocs-mermaid2-plugin = ">=1.2.1,<2.0.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
httpx = ">=0.28.1,<0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "blue . && isort ."
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"
